--- a/Beacon/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Beacon/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Jump to player controller"/>
                                 <connections>
-                                    <segue destination="Cez-pd-0Gy" kind="show" id="LPe-ea-e8v"/>
+                                    <segue destination="Cez-pd-0Gy" kind="show" identifier="kSegueOfECPlayController" id="LPe-ea-e8v"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lR-Kp-I3R">
@@ -55,29 +55,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ojb-mr-Vbm">
-                                <rect key="frame" x="16" y="92.5" width="288" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="SPY-Xe-SDZ"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="3lR-Kp-I3R" firstAttribute="top" secondItem="ojb-mr-Vbm" secondAttribute="bottom" constant="20" id="BHv-UA-fLs"/>
-                            <constraint firstItem="ojb-mr-Vbm" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="D2J-K6-CRA"/>
-                            <constraint firstItem="ojb-mr-Vbm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Y40-6e-FBA"/>
                             <constraint firstItem="xTX-iv-sit" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aw4-3F-RTY"/>
                             <constraint firstItem="3lR-Kp-I3R" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="v7H-WJ-FwL"/>
                             <constraint firstItem="xTX-iv-sit" firstAttribute="top" secondItem="3lR-Kp-I3R" secondAttribute="bottom" constant="30" id="vgO-Iu-glk"/>
                             <constraint firstItem="3lR-Kp-I3R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xCZ-an-TBp"/>
-                            <constraint firstItem="ojb-mr-Vbm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="yZe-7E-fkH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Prototype Main" id="a6a-Pc-n4I"/>
-                    <connections>
-                        <outlet property="_imageView" destination="ojb-mr-Vbm" id="OlG-yE-1Ym"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBq-MM-nNk">
-                                <rect key="frame" x="10" y="134" width="300" height="300"/>
+                                <rect key="frame" x="10" y="114" width="300" height="300"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="6I6-Vt-gqF"/>
@@ -104,61 +91,90 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0w-Zn-ZSC">
-                                <rect key="frame" x="10" y="514" width="46" height="30"/>
+                                <rect key="frame" x="10" y="494" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="46" id="qMh-Xs-tU8"/>
                                     <constraint firstAttribute="height" constant="30" id="uuh-1F-txH"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Start"/>
                                 <connections>
                                     <action selector="startButtonClicked:" destination="Cez-pd-0Gy" eventType="touchUpInside" id="4kF-vm-ZPY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XKl-H2-bzq">
-                                <rect key="frame" x="10" y="464" width="300" height="30"/>
+                                <rect key="frame" x="10" y="444" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3GF-Zk-Ejc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Full Screen"/>
                                 <connections>
                                     <action selector="fullScreenButtonClicked:" destination="Cez-pd-0Gy" eventType="touchUpInside" id="IkT-N8-mFd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-Ca-p6e">
-                                <rect key="frame" x="264" y="514" width="46" height="30"/>
+                                <rect key="frame" x="264" y="494" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="46" id="Hlk-kP-ZUf"/>
                                     <constraint firstAttribute="height" constant="30" id="v88-vv-l50"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Stop"/>
                                 <connections>
                                     <action selector="stopButtonClicked:" destination="Cez-pd-0Gy" eventType="touchUpInside" id="N9t-Cy-KGK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TcI-5n-Ico">
+                                <rect key="frame" x="139" y="492.5" width="42" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Mute"/>
+                                <connections>
+                                    <action selector="muteButtonClicked:" destination="Cez-pd-0Gy" eventType="touchUpInside" id="LJv-2S-b9e"/>
+                                </connections>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cWx-nH-lVM">
+                                <rect key="frame" x="16" y="434" width="288" height="2"/>
+                            </progressView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dxI-NY-iBY">
+                                <rect key="frame" x="16" y="482" width="288" height="2"/>
+                                <color key="tintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="TcI-5n-Ico" firstAttribute="centerY" secondItem="i0w-Zn-ZSC" secondAttribute="centerY" id="0Wp-mY-Aai"/>
                             <constraint firstItem="cVI-Ca-p6e" firstAttribute="centerY" secondItem="i0w-Zn-ZSC" secondAttribute="centerY" id="Amj-ne-N1j"/>
                             <constraint firstItem="XKl-H2-bzq" firstAttribute="trailing" secondItem="vBq-MM-nNk" secondAttribute="trailing" id="Cva-Bx-mCe"/>
+                            <constraint firstItem="TcI-5n-Ico" firstAttribute="centerX" secondItem="6LI-wt-P0J" secondAttribute="centerX" id="DAF-Bt-75j"/>
+                            <constraint firstItem="TcI-5n-Ico" firstAttribute="top" secondItem="dxI-NY-iBY" secondAttribute="bottom" constant="8.5" id="Dsv-8R-1MD"/>
                             <constraint firstItem="vBq-MM-nNk" firstAttribute="centerX" secondItem="6LI-wt-P0J" secondAttribute="centerX" id="FIp-R5-OiF"/>
                             <constraint firstItem="cVI-Ca-p6e" firstAttribute="trailing" secondItem="vBq-MM-nNk" secondAttribute="trailing" id="IlW-lC-spM"/>
                             <constraint firstItem="i0w-Zn-ZSC" firstAttribute="leading" secondItem="vBq-MM-nNk" secondAttribute="leading" id="S5i-RX-yUL"/>
                             <constraint firstItem="XKl-H2-bzq" firstAttribute="top" secondItem="vBq-MM-nNk" secondAttribute="bottom" constant="30" id="VzB-WW-hgL"/>
+                            <constraint firstItem="cWx-nH-lVM" firstAttribute="top" secondItem="vBq-MM-nNk" secondAttribute="bottom" constant="20" id="Ya4-1Z-cH0"/>
+                            <constraint firstItem="dxI-NY-iBY" firstAttribute="leading" secondItem="6LI-wt-P0J" secondAttribute="leadingMargin" id="bj1-T7-fqI"/>
+                            <constraint firstItem="dxI-NY-iBY" firstAttribute="top" secondItem="XKl-H2-bzq" secondAttribute="bottom" constant="8" id="cdE-a5-W6o"/>
+                            <constraint firstItem="XKl-H2-bzq" firstAttribute="top" secondItem="cWx-nH-lVM" secondAttribute="bottom" constant="8" id="kQD-86-lqN"/>
+                            <constraint firstItem="dxI-NY-iBY" firstAttribute="trailing" secondItem="6LI-wt-P0J" secondAttribute="trailingMargin" id="kjh-2G-Ni8"/>
                             <constraint firstItem="XKl-H2-bzq" firstAttribute="leading" secondItem="vBq-MM-nNk" secondAttribute="leading" id="lXA-7X-umt"/>
-                            <constraint firstItem="vBq-MM-nNk" firstAttribute="centerY" secondItem="6LI-wt-P0J" secondAttribute="centerY" id="oYZ-EC-ugt"/>
+                            <constraint firstItem="vBq-MM-nNk" firstAttribute="centerY" secondItem="6LI-wt-P0J" secondAttribute="centerY" constant="-20" id="oYZ-EC-ugt"/>
                             <constraint firstItem="i0w-Zn-ZSC" firstAttribute="top" secondItem="XKl-H2-bzq" secondAttribute="bottom" constant="20" id="rS1-1e-zDp"/>
+                            <constraint firstItem="cWx-nH-lVM" firstAttribute="leading" secondItem="6LI-wt-P0J" secondAttribute="leadingMargin" id="u2l-Rf-zhI"/>
+                            <constraint firstItem="cWx-nH-lVM" firstAttribute="trailing" secondItem="6LI-wt-P0J" secondAttribute="trailingMargin" id="ymA-2E-uR5"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="_cacheProgressBar" destination="dxI-NY-iBY" id="uqH-t8-NOT"/>
                         <outlet property="_playerView" destination="vBq-MM-nNk" id="kUc-Sb-HOA"/>
+                        <outlet property="_videoProgressBar" destination="cWx-nH-lVM" id="pxV-n3-voX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pKD-Xr-6EZ" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="893.60000000000002" y="122.78860569715144"/>
+            <point key="canvasLocation" x="892.5" y="122.53521126760563"/>
         </scene>
     </scenes>
 </document>
