--- a/Beacon/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Beacon/Base.lproj/Main.storyboard
@@ -10,12 +10,19 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SFDisplayHeavy.ttf">
+            <string>SFUIDisplay-Heavy</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="jQc-tN-SQJ">
             <objects>
                 <navigationController navigationBarHidden="YES" id="HqE-lK-Qi0" sceneMemberID="viewController">
                     <nil key="simulatedTopBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" id="8tf-bL-wjh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -81,7 +88,7 @@
                                     <constraint firstAttribute="width" constant="150" id="5MC-Uu-bk7"/>
                                     <constraint firstAttribute="height" constant="48" id="nsY-el-J16"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Heavy" family="SF UI Display" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -246,9 +253,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cardA" width="343" height="426"/>
-        <image name="cardB" width="318" height="399"/>
-        <image name="cardC" width="304" height="378"/>
+        <image name="cardA" width="342" height="426"/>
+        <image name="cardB" width="322" height="401"/>
+        <image name="cardC" width="297" height="370"/>
         <image name="down" width="69" height="69"/>
         <image name="more" width="69" height="69"/>
         <image name="up" width="69" height="69"/>
