--- a/Beacon/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Beacon/Base.lproj/Main.storyboard
@@ -130,13 +130,13 @@
         <!--Video Table View Controller-->
         <scene sceneID="s0h-At-KCj">
             <objects>
-                <tableViewController id="fzJ-fE-Yz7" customClass="ECVideoTableViewController" sceneMemberID="viewController">
+                <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="fzJ-fE-Yz7" customClass="ECVideoTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="246" sectionHeaderHeight="28" sectionFooterHeight="28" id="nsj-8g-ccK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="715"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableVideoReuseIdentifier" rowHeight="390" id="Hvs-kf-CB8">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTablePlayerReuseIdentifier" rowHeight="390" id="Hvs-kf-CB8" customClass="ECVideoPlayerTableViewCell">
                                 <rect key="frame" x="0.0" y="28" width="375" height="390"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hvs-kf-CB8" id="9I6-tR-8P2">
@@ -160,13 +160,13 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GU8-8y-4dA">
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GU8-8y-4dA">
                                             <rect key="frame" x="21" y="324" width="338" height="18"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="egG-bS-KeE"/>
                                             </constraints>
-                                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gmd-dW-Ns6">
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gmd-dW-Ns6">
                                                 <size key="itemSize" width="59" height="20"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -174,7 +174,7 @@
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kECVideoCollectionReuseIdentifier" id="6Gr-Rd-Jjk">
-                                                    <rect key="frame" x="0.0" y="0.0" width="59" height="20"/>
+                                                    <rect key="frame" x="0.0" y="-1" width="59" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                         <rect key="frame" x="0.0" y="0.0" width="59" height="20"/>
@@ -210,6 +210,9 @@
                                                 <constraint firstAttribute="height" constant="19" id="RMk-ai-JCK"/>
                                             </constraints>
                                             <state key="normal" image="toolPlay"/>
+                                            <connections>
+                                                <action selector="playButtonDidClicked:" destination="Hvs-kf-CB8" eventType="touchUpInside" id="F8o-Sl-jB0"/>
+                                            </connections>
                                         </button>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="toolTimeBg" translatesAutoresizingMaskIntoConstraints="NO" id="kRr-ht-5eN">
                                             <rect key="frame" x="53" y="224" width="139" height="33"/>
@@ -225,6 +228,9 @@
                                                 <constraint firstAttribute="height" constant="21" id="qsv-ca-mr9"/>
                                             </constraints>
                                             <state key="normal" image="toolShare"/>
+                                            <connections>
+                                                <action selector="shareButtonDidClicked:" destination="Hvs-kf-CB8" eventType="touchUpInside" id="WhP-iN-MQl"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDp-Z2-8Q0">
                                             <rect key="frame" x="255" y="231" width="16" height="17"/>
@@ -233,6 +239,9 @@
                                                 <constraint firstAttribute="height" constant="17" id="y73-fp-dcG"/>
                                             </constraints>
                                             <state key="normal" image="toolFullScreen"/>
+                                            <connections>
+                                                <action selector="fullScreenButtonDidClicked:" destination="Hvs-kf-CB8" eventType="touchUpInside" id="HIw-Ug-bgP"/>
+                                            </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:56:03 / 1:20:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeY-cu-zEV">
                                             <rect key="frame" x="65" y="232" width="120" height="18"/>
@@ -251,6 +260,9 @@
                                                 <constraint firstAttribute="width" constant="16" id="fnd-0b-gpr"/>
                                             </constraints>
                                             <state key="normal" image="like"/>
+                                            <connections>
+                                                <action selector="likeButtonDidClicked:" destination="Hvs-kf-CB8" eventType="touchUpInside" id="q30-gQ-tH4"/>
+                                            </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1606" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMh-xD-25C">
                                             <rect key="frame" x="44" y="353" width="34" height="18"/>
@@ -288,8 +300,15 @@
                                         <constraint firstItem="XGX-qa-I2t" firstAttribute="top" secondItem="9I6-tR-8P2" secondAttribute="top" id="ugZ-NN-ILe"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="playerScreen" destination="XGX-qa-I2t" id="dCe-cL-6bP"/>
+                                    <outlet property="resourceLikeLabel" destination="PMh-xD-25C" id="sZk-6H-yw0"/>
+                                    <outlet property="resourceTitleLabel" destination="2iG-kT-5BW" id="6cs-Lx-F4a"/>
+                                    <outlet property="resourceTypeCollectionView" destination="GU8-8y-4dA" id="ew2-os-nky"/>
+                                    <outlet property="timeLabel" destination="SeY-cu-zEV" id="4qz-wI-pKh"/>
+                                </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableIntroReuseIdentifier" rowHeight="150" id="lgz-vP-5gO">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableIntroductReuseIdentifier" rowHeight="150" id="lgz-vP-5gO">
                                 <rect key="frame" x="0.0" y="418" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lgz-vP-5gO" id="BnT-k3-Csh">
@@ -326,7 +345,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableGuessReuseIdentifier" rowHeight="150" id="iY0-qK-lY0">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableGuessingReuseIdentifier" rowHeight="150" id="iY0-qK-lY0">
                                 <rect key="frame" x="0.0" y="568" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iY0-qK-lY0" id="Vch-06-sh6">
@@ -369,7 +388,7 @@
                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
-                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kECVideoCollectionReuseIdentifier" id="jyp-mA-uRw">
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="jyp-mA-uRw">
                                                     <rect key="frame" x="0.0" y="0.0" width="59" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
